<resources>
    <string name="app_name">Project Bluetooth Device Pairing</string>
    <string name="bluetoothItemName">Name of device</string>
    <string name="bluetoothItemAddress">Address of device</string>
    <string name="bluetoothUnactivatedBtn">CANCEL DISCOVERY</string>
    <string name="bluetoothActivatedBtn">START DISCOVERY</string>
    <string name="deviceDisconnectBtn">DISCONNECT</string>
    <string name="deviceDisconnectedInfo" />
    <string name="deviceConnected" />
    <string name="bluetoothTypeName">Bluetooth 4.0</string>
</resources>