<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/bluetoothTypeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/bluetoothTypeName"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/bluetoothActivatedBtn" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/bluetoothUnactivatedBtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deviceConnectedId"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/deviceConnected"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/disconnect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/deviceDisconnectBtn" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deviceConnectedInfoId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/deviceDisconnectedInfo" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ListView
        android:id="@+id/bluetoothListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>