<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:onClick="actionToDoWhenDeviceIsConnected"
    >

    <ImageButton
        android:id="@+id/bluetoothIcon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_weight="0"
        android:contentDescription="@string/app_name"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    <TextView
        android:id="@+id/bluetoothItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bluetoothItemName" />

    <TextView
        android:id="@+id/bluetoothItemAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bluetoothItemAddress" />
</LinearLayout>